[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/live_link_face_tool/head_material.tres" type="Material" id=1]
[ext_resource path="res://addons/live_link_face_tool/face_mesg.scn" type="PackedScene" id=3]
[ext_resource path="res://addons/live_link_face_tool/main_screen.gd" type="Script" id=5]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.0117647, 0.027451, 0.00784314, 1 )

[sub_resource type="World" id=2]
environment = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ViewportContainer" type="ViewportContainer" parent="HSplitContainer"]
margin_right = 474.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="HSplitContainer/ViewportContainer"]
size = Vector2( 474, 1000 )
world = SubResource( 2 )
handle_input_locally = false
msaa = 1
fxaa = true
debanding = true
render_target_update_mode = 3

[node name="WorldEnvironment" type="WorldEnvironment" parent="HSplitContainer/ViewportContainer/Viewport"]
environment = SubResource( 1 )

[node name="Camera" type="Camera" parent="HSplitContainer/ViewportContainer/Viewport/WorldEnvironment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0330741, 0.352676 )

[node name="face" parent="HSplitContainer/ViewportContainer/Viewport" instance=ExtResource( 3 )]
unique_name_in_owner = true
material/0 = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_left = 486.0
margin_right = 600.0
margin_bottom = 1000.0
size_flags_vertical = 3

[node name="ServerState" type="CheckBox" parent="HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 114.0
margin_bottom = 24.0
text = "Enable Server"

[node name="PortField" type="SpinBox" parent="HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 114.0
margin_bottom = 52.0
max_value = 99999.0
value = 11111.0
prefix = "Port: "

[node name="ClientList" type="ItemList" parent="HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 56.0
margin_right = 114.0
margin_bottom = 1000.0
size_flags_vertical = 3
max_text_lines = 2

[connection signal="visibility_changed" from="." to="." method="_on_Control_visibility_changed"]
[connection signal="toggled" from="HSplitContainer/VBoxContainer/ServerState" to="." method="_on_CheckBox_toggled"]
[connection signal="item_selected" from="HSplitContainer/VBoxContainer/ClientList" to="." method="_on_ClientList_item_selected"]
